# reptree

./: .airul.json  .cursorrules  .gitignore  AGENTS.md  README.md  TODO-AI.md  package-lock.json  package.json  transients-in-vertex-objects.md  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.light.config.ts
__bench__/: core-operations.bench.ts  scaling.bench.ts  sync-operations.bench.ts  yjs-integration.bench.ts
__tests__/: README.md  basic-usage.test.ts  comparison.test.ts  cross-api-sync.test.ts  example.test.ts  fuzzy.test.ts  json-properties.test.ts  lww-properties.test.ts  property-type-protection.test.ts  reactive-wrapper.test.ts  reactive.test.ts  same-tree-vertex-sync.test.ts  sqlite-external-store.test.ts  state-vector-sync.test.ts  structure-comparison.test.ts  svelte-integration.test.ts  svelte-runes.svelte.test.js  transactions.test.ts  unsupported-properties.test.ts  yjs-dev.test.ts  yjs-properties.test.ts  zod-integration.test.ts
docs/: big-data-v1.md  big-trees.md  database.md  ops-serialization.md  reactive-vertices.md  svelte-bindvertex-proposal.md  svelte-integration.md  transactions-shadow-tree.md  transactions.md  vector-states.md  yjs.md
examples/: basic-usage.ts  yjs-example.ts
old_tests/: fuzzyTests.ts  (+5 more)
reptree-rs/: .gitignore  Cargo.toml  README.md
reptree-rs/examples/: sqlite_example.rs
reptree-rs/src/: lib.rs
reptree-rs/src/crdt/: mod.rs  state_vector.rs  tree_state.rs
reptree-rs/src/storage/: mod.rs  sqlite.rs  sqlite_fixed.rs  sqlite_fixed2.rs
reptree-rs/src/types/: mod.rs
reptree-rs/tests/: sqlite_storage_test.rs
(+56 files in other folders)
