[package]
name = "reptree-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of RepTree CRDT for tree data structures"
authors = ["Dmitry Kury (d@dkury.com)"]
license = "MIT"

[dependencies]
# Core functionality
yrs = "0.17.0"  # Rust implementation of Yjs CRDT
rusqlite = { version = "0.29.0", features = ["bundled"] }  # SQLite database
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON support
uuid = { version = "1.3.0", features = ["v4", "serde"] }  # UUID generation
thiserror = "1.0"  # Error handling
lru = "0.10.0"  # LRU cache
async-trait = "0.1.68"  # Async trait support
futures = "0.3.28"  # Futures for async streams

[dev-dependencies]
tempfile = "3.5.0"  # Temporary files for tests
